class Basket{
    constructor(product, basketTotal, discountedProduct, discountedBasketTotal){
        this.product = []
        this.basketTotal = basketTotal
        this.discountedProduct = []
        this.discountedBasketTotal = discountedBasketTotal
    }
    //calculateTotalDiscount()
}

module.exports = Basket