class Order {
    constructor(name, oldOrders, activeOrder){
        this.name = name
        this.oldOrders =[]
        this.activeOrder = []
    }

}


module.exports = Order