@startuml getirClone classDiagram
class User <<Entity>> {
+name :String
+email :String
+telephone :String
+addresses :String
+adressGeolocation :adressGeolocation[x,y]
+creditCardInfo:String


+ addProductToBasket()
+ removeProductFromBasket()
+ order()
+ useDiscount()

}
class ProductCategories <<Entity>>{
+productCategory : String


}

class Order <<Entity>>{
    + name : String
    + oldOrders:oldOrders[]
    + activeOrder : product[]
  
    


}

class Product <<Entity>> {
+ name :String
+ photo : Constant
+ description :String
+ price :Number
+ hasDiscount: Boolean


}

class Basket <<Entity>> {
+ product : product[]
+ basketTotal: Number
+ discountedProduct : discountedProduct[]
+ discountedBasketTotal : Number

+calculateTotalDiscount()


}

class Discount <<ValueObject>>{

+ discountPercentage: Number
+ discountTotal: Number

}


Product -up-|> User
Product -up-|> ProductCategories
Product -up-|> Discount
User -up-> Discount
Basket -up-|> Discount
ProductCategories  -up-|> User

Product - Basket : adds >
Basket *- Order: orders >
Basket -- User < owns
@enduml

